# uConsole-sleep

./: .gitignore  README.md  flake.nix  module.nix  pyproject.toml  test_imports.py
sleep-power-control/: pyproject.toml  setup.py
sleep-power-control/src/sleep_power_control/: __init__.py  find_internal_kb.py
sleep-remap-powerkey/: pyproject.toml  setup.py
sleep-remap-powerkey/src/sleep_remap_powerkey/: __init__.py  find_backlight.py  find_drm_panel.py  find_framebuffer.py  find_power_key.py  sleep_display_control.py
