[project]
name = "uconsole-sleep"
version = "0.1.0"
description = "uConsole Sleep workspace with power control and power key remapping"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "sleep-power-control",
    "sleep-remap-powerkey"
]

[tool.uv.sources]
sleep-power-control = { path = "sleep-power-control" }
sleep-remap-powerkey = { path = "sleep-remap-powerkey" }
