[project]
name = "uconsole-sleep"
version = "0.1.0"
description = "uConsole Sleep workspace with power control and power key remapping"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sleep-power-control",
    "sleep-remap-powerkey",
]

[tool.uv.workspace]
members = [
    "sleep-power-control",
    "sleep-remap-powerkey"
]

[tool.uv.sources]
sleep-power-control = { workspace = true }
sleep-remap-powerkey = { workspace = true }
