[project]
name = "sleep-power-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jacbart", email = "jacbart@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "inotify-simple>=1.3.5"
]

[project.scripts]
sleep-power-control = "sleep_power_control:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
